2008-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimplayer.c (gimp_layer_new_from_region): added some
	empty lines for readability.

2008-08-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: added gimp_image_get_projection().

	* app/display/gimpdisplay-handlers.c
	* app/display/gimpdisplayshell-render.c
	* app/display/gimpdisplayshell-scroll.c
	* app/paint/gimppaintcore.c
	* app/paint/gimpsourcecore.c
	* app/tools/gimpbycolorselecttool.c
	* app/tools/gimpeditselectiontool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimppainttool.c
	* app/widgets/gimpsamplepointeditor.c
	* tools/pdbgen/pdb/image.pdb: use the new accessor function.

	* app/pdb/image-cmds.c: regenerated.

2008-08-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcurvestool.h: fixed comment.

2008-08-07  Tor Lillqvist  <tml@novell.com>

	* configure.in: Define WIN32_LARGE_ADDRESS_AWARE as
	-Wl,--large-address-aware on 32-bit Windows, empty
	otherwise. AC_SUBST() it.

	* app/Makefile.am (win32_ldflags): Use WIN32_LARGE_ADDRESS_AWARE
	instead of hardcoding the switch, as it isn't valid, and would be
	pointless, when building a 64-bit GIMP.

2008-08-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-shadow.c: removed unused include.

2008-08-06  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_center_image): The operation of centering the
	image in the display shell has by itself nothing to do with
	resizing the display shell window.

2008-08-06  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixelrgn.c (gimp_pixel_rgn_configure): fixed gtk-doc
	comment syntax.

2008-08-06  Sven Neumann  <sven@gimp.org>

	* app/gui/gimpdbusservice.c: minor cleanups.

2008-08-05  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.c (gimp_display_shell_scale):
	Only center on the mouse pointer when zooming if it is within the
	canvas.
