@@ -1,5 +1,10 @@
 2008-08-07  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpselection.c (gimp_selection_extract): aded a
+	comment explaining why copy_region_nocow() is being used here.
+
+2008-08-07  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimplayer.c (gimp_layer_new_from_region): added some
 	empty lines for readability.
 
